--- a/src/pages/components/Carousel/style.module.scss
+++ b/src/pages/components/Carousel/style.module.scss
@@ -1,9 +1,5 @@
 .swiper {
-  width: 100%;
-  height: 100%;
-}
-
-.swiper-slide {
+  height: 626px;
   text-align: center;
   font-size: 18px;
   background: #fff;
@@ -21,11 +17,16 @@
   -ms-flex-align: center;
   -webkit-align-items: center;
   align-items: center;
-}
 
-.swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  border-top: 4px solid var(--chakra-colors-red-800);
+
+  p {
+    position: absolute;
+    top: 20%;
+    left: 10%;
+    z-index: 999;
+    text-align: left;
+    font-weight: 700;
+    font-size: 1.8rem;
+  }
 }
